wip: update AuthAccountResponse DTO on the backend to match frontend
